added executable scripts

--- a/3c-model-training-xgb.ipynb
+++ b/3c-model-training-xgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c97270a2-9f8e-47e8-8121-fed9cbf20a34",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "2db3b920-8161-404b-9370-ae5029a6872e",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "db4fa9f8-527d-49f7-809c-98b44343d84a",
    "metadata": {},
    "outputs": [],
@@ -46,13 +46,13 @@
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Define feature columns (X) and target variable (y)\n",
-    "X = df.drop(columns=[\"churn\"])\n",
+    "X = df.drop(columns=[\"churn\",\"customer_id\"])\n",
     "y = df[\"churn\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "6ca810ed-5673-49bb-b1bc-a72e4c4ee8f6",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Set: (800, 6), Testing Set: (200, 6)\n"
+      "Training Set: (800, 5), Testing Set: (200, 5)\n"
      ]
     }
    ],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "cf61348b-1a9b-4350-8bb9-2145f7673d69",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resampled Training Set: (1274, 6)\n"
+      "Resampled Training Set: (1274, 5)\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "b6c8472f-8470-4f98-a304-fca76c400ecd",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Model Parameters: {'colsample_bytree': 0.8, 'learning_rate': 0.2, 'max_depth': 6, 'n_estimators': 300, 'subsample': 1.0}\n"
+      "Best Model Parameters: {'colsample_bytree': 1.0, 'learning_rate': 0.1, 'max_depth': 9, 'n_estimators': 300, 'subsample': 1.0}\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "e935324a-170e-40dc-ac62-2af640e9c0f2",
    "metadata": {},
    "outputs": [
@@ -545,22 +545,22 @@
        "}\n",
        "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
        "              colsample_bylevel=None, colsample_bynode=None,\n",
-       "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
+       "              colsample_bytree=1.0, device=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric=&#x27;logloss&#x27;,\n",
        "              feature_types=None, gamma=None, grow_policy=None,\n",
        "              importance_type=None, interaction_constraints=None,\n",
-       "              learning_rate=0.2, max_bin=None, max_cat_threshold=None,\n",
-       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=6,\n",
+       "              learning_rate=0.1, max_bin=None, max_cat_threshold=None,\n",
+       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=9,\n",
        "              max_leaves=None, min_child_weight=None, missing=nan,\n",
        "              monotone_constraints=None, multi_strategy=None, n_estimators=300,\n",
        "              n_jobs=None, num_parallel_tree=None, random_state=42, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;XGBClassifier<span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
        "              colsample_bylevel=None, colsample_bynode=None,\n",
-       "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
+       "              colsample_bytree=1.0, device=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric=&#x27;logloss&#x27;,\n",
        "              feature_types=None, gamma=None, grow_policy=None,\n",
        "              importance_type=None, interaction_constraints=None,\n",
-       "              learning_rate=0.2, max_bin=None, max_cat_threshold=None,\n",
-       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=6,\n",
+       "              learning_rate=0.1, max_bin=None, max_cat_threshold=None,\n",
+       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=9,\n",
        "              max_leaves=None, min_child_weight=None, missing=nan,\n",
        "              monotone_constraints=None, multi_strategy=None, n_estimators=300,\n",
        "              n_jobs=None, num_parallel_tree=None, random_state=42, ...)</pre></div> </div></div></div></div>"
@@ -568,18 +568,18 @@
       "text/plain": [
        "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
        "              colsample_bylevel=None, colsample_bynode=None,\n",
-       "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
+       "              colsample_bytree=1.0, device=None, early_stopping_rounds=None,\n",
        "              enable_categorical=False, eval_metric='logloss',\n",
        "              feature_types=None, gamma=None, grow_policy=None,\n",
        "              importance_type=None, interaction_constraints=None,\n",
-       "              learning_rate=0.2, max_bin=None, max_cat_threshold=None,\n",
-       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=6,\n",
+       "              learning_rate=0.1, max_bin=None, max_cat_threshold=None,\n",
+       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=9,\n",
        "              max_leaves=None, min_child_weight=None, missing=nan,\n",
        "              monotone_constraints=None, multi_strategy=None, n_estimators=300,\n",
        "              n_jobs=None, num_parallel_tree=None, random_state=42, ...)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "3779fbfd-6d80-4d31-88e3-7a1bc8cf5fb5",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "id": "2a17e43e-9fb2-4236-af11-fe7012d64045",
    "metadata": {},
    "outputs": [
@@ -613,11 +613,11 @@
      "text": [
       "\n",
       "Model Performance Metrics:\n",
-      "Accuracy: 0.7100\n",
-      "Precision: 0.1852\n",
-      "Recall: 0.1220\n",
-      "F1 Score: 0.1471\n",
-      "AUC-ROC: 0.4341\n"
+      "Accuracy: 0.6200\n",
+      "Precision: 0.1277\n",
+      "Recall: 0.1463\n",
+      "F1 Score: 0.1364\n",
+      "AUC-ROC: 0.4487\n"
      ]
     }
    ],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "ffcc19e5-a814-4e54-b2e1-c456af593f7e",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "5daccd97-5840-4a02-952a-e200275be663",
    "metadata": {},
    "outputs": [
