--- a/1-exploratory-data-analysis.ipynb
+++ b/1-exploratory-data-analysis.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "0443d5af-f378-489b-a5ca-85729a1961c6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import boto3\n",
+    "from io import StringIO\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -18,94 +20,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "54ca06cb-bc24-4bff-a9ce-126c05504470",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ClientError",
-     "evalue": "An error occurred (AccessDenied) when calling the GetObject operation: Access Denied",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mClientError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[36], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m s3 \u001b[38;5;241m=\u001b[39m boto3\u001b[38;5;241m.\u001b[39mclient(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124ms3\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Read CSV file from S3\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m obj \u001b[38;5;241m=\u001b[39m \u001b[43ms3\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_object\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBucket\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbucket_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mKey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfile_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m csv_data \u001b[38;5;241m=\u001b[39m obj[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBody\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mread()\u001b[38;5;241m.\u001b[39mdecode(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Convert CSV data to pandas DataFrame\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/botocore/client.py:569\u001b[0m, in \u001b[0;36mClientCreator._create_api_method.<locals>._api_call\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m    565\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\n\u001b[1;32m    566\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpy_operation_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m() only accepts keyword arguments.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    567\u001b[0m     )\n\u001b[1;32m    568\u001b[0m \u001b[38;5;66;03m# The \"self\" in this scope is referring to the BaseClient.\u001b[39;00m\n\u001b[0;32m--> 569\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_make_api_call\u001b[49m\u001b[43m(\u001b[49m\u001b[43moperation_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.11/site-packages/botocore/client.py:1023\u001b[0m, in \u001b[0;36mBaseClient._make_api_call\u001b[0;34m(self, operation_name, api_params)\u001b[0m\n\u001b[1;32m   1019\u001b[0m     error_code \u001b[38;5;241m=\u001b[39m error_info\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mQueryErrorCode\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m error_info\u001b[38;5;241m.\u001b[39mget(\n\u001b[1;32m   1020\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCode\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1021\u001b[0m     )\n\u001b[1;32m   1022\u001b[0m     error_class \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mexceptions\u001b[38;5;241m.\u001b[39mfrom_code(error_code)\n\u001b[0;32m-> 1023\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m error_class(parsed_response, operation_name)\n\u001b[1;32m   1024\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m   1025\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parsed_response\n",
-      "\u001b[0;31mClientError\u001b[0m: An error occurred (AccessDenied) when calling the GetObject operation: Access Denied"
-     ]
-    }
-   ],
-   "source": [
-    "# import boto3\n",
-    "# import pandas as pd\n",
-    "# from io import StringIO\n",
-    "\n",
-    "# # Define S3 bucket and file details\n",
-    "# bucket_name = \"refocus-ai\"\n",
-    "# file_key = \"insurance-data-raw/insurance_data_2025-02-11_02-45-54.csv\"\n",
-    "\n",
-    "# # Create S3 client\n",
-    "# s3 = boto3.client(\"s3\")\n",
-    "\n",
-    "# # Read CSV file from S3\n",
-    "# obj = s3.get_object(Bucket=bucket_name, Key=file_key)\n",
-    "# csv_data = obj[\"Body\"].read().decode(\"utf-8\")\n",
-    "\n",
-    "# # Convert CSV data to pandas DataFrame\n",
-    "# df = pd.read_csv(StringIO(csv_data))\n",
-    "\n",
-    "# # Display DataFrame\n",
-    "# print(df.head())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f691a48-eabc-4c4a-940d-ea80afed7fce",
-   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "7d8119d2-aa49-4d6b-95b1-026e90fddfa6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1000 entries, 0 to 999\n",
-      "Data columns (total 6 columns):\n",
-      " #   Column          Non-Null Count  Dtype \n",
-      "---  ------          --------------  ----- \n",
-      " 0   customer_id     1000 non-null   int64 \n",
-      " 1   age             1000 non-null   int64 \n",
-      " 2   annual_premium  1000 non-null   int64 \n",
-      " 3   policy_type     1000 non-null   object\n",
-      " 4   claims_count    1000 non-null   int64 \n",
-      " 5   churn           1000 non-null   int64 \n",
-      "dtypes: int64(5), object(1)\n",
-      "memory usage: 47.0+ KB\n"
-     ]
-    }
-   ],
    "source": [
-    "# Load the dataset\n",
-    "file_path = \"data/inputs/insurance_data.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
+    "# Define S3 bucket and file details\n",
+    "bucket_name = \"refocus-storage\"\n",
+    "file_key = \"inusrance-data-raw/insurance_data_2025-02-11_02-45-54.csv\"\n",
     "\n",
-    "# Display basic information about the dataset\n",
-    "df.info()"
+    "# Create S3 client\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "# Read CSV file from S3\n",
+    "obj = s3.get_object(Bucket=bucket_name, Key=file_key)\n",
+    "csv_data = obj[\"Body\"].read().decode(\"utf-8\")\n",
+    "\n",
+    "# Convert CSV data to pandas DataFrame\n",
+    "df = pd.read_csv(StringIO(csv_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f6e2c3dc-a8d1-4c5f-8a4a-96d98f167d92",
+   "execution_count": 11,
+   "id": "517aa4de-d00b-40bd-b9c5-ed725fef1ba0",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +134,7 @@
        "4            5   56            3448        auto             3      0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +145,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
+   "id": "7d8119d2-aa49-4d6b-95b1-026e90fddfa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   customer_id     1000 non-null   int64 \n",
+      " 1   age             1000 non-null   int64 \n",
+      " 2   annual_premium  1000 non-null   int64 \n",
+      " 3   policy_type     1000 non-null   object\n",
+      " 4   claims_count    1000 non-null   int64 \n",
+      " 5   churn           1000 non-null   int64 \n",
+      "dtypes: int64(5), object(1)\n",
+      "memory usage: 47.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# # Load the dataset\n",
+    "# file_path = \"data/inputs/insurance_data.csv\"\n",
+    "# df = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display basic information about the dataset\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "51ba5713-50ea-4ca8-b29e-f1d6d4ea5465",
    "metadata": {},
    "outputs": [],
@@ -218,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "a41da4f0-fe40-40e6-9255-be00782ab8be",
    "metadata": {},
    "outputs": [
@@ -331,7 +304,7 @@
        "max    1000.000000    74.000000     4996.000000      4.000000     1.000000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "d9ddcd70-6c16-4f3e-b763-1b7a504a5efc",
    "metadata": {},
    "outputs": [
@@ -360,7 +333,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,10 +346,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "02f7e20d-1b8c-476d-8ed6-161cb054e53c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "churn\n",
+       "0    0.796\n",
+       "1    0.204\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Churn distribution\n",
     "class_distribution = df[\"churn\"].value_counts(normalize=True)\n",
@@ -385,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "85d71c68-26ce-4c9d-8260-a8f7b707bc79",
    "metadata": {},
    "outputs": [
@@ -423,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "bba353c6-475e-46cc-b0d7-51165373cd1d",
    "metadata": {},
    "outputs": [
