--- a/2-pre-processing.ipynb
+++ b/2-pre-processing.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "155e05be-2f7a-49f5-a278-a096726ad1b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
+    "import boto3\n",
+    "from io import StringIO\n",
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -16,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "4ac2db75-8500-4034-98bb-0b06b81e571a",
    "metadata": {},
    "outputs": [],
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "36eb7fdf-d158-41c6-b0cf-81516c6f74c9",
    "metadata": {},
    "outputs": [],
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "8fe1700c-df1c-4b5c-a6f8-89ec7e1ae087",
    "metadata": {},
    "outputs": [
@@ -54,15 +56,29 @@
    ],
    "source": [
     "# Load dataset\n",
-    "file_path = \"data/inputs/insurance_data.csv\"\n",
-    "df = pd.read_csv(file_path)\n",
+    "# file_path = \"data/inputs/insurance_data.csv\"\n",
+    "# df = pd.read_csv(file_path)\n",
+    "# Define S3 bucket and file details\n",
+    "bucket_name = \"refocus-storage\"\n",
+    "filename = 'insurance_data_2025-02-11_02-45-54'\n",
+    "file_key = \"inusrance-data-raw/{}.csv\".format(filename)\n",
+    "\n",
+    "# Create S3 client\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "# Read CSV file from S3\n",
+    "obj = s3.get_object(Bucket=bucket_name, Key=file_key)\n",
+    "csv_data = obj[\"Body\"].read().decode(\"utf-8\")\n",
+    "\n",
+    "# Convert CSV data to pandas DataFrame\n",
+    "df = pd.read_csv(StringIO(csv_data))\n",
     "\n",
     "print(\"Dataset Loaded Successfully!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "6712c93c-d6d3-4c11-8859-437a8e3c2e24",
    "metadata": {},
    "outputs": [
@@ -92,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "4966d98b-1b19-4a0c-9588-ed2ad7967ec6",
    "metadata": {},
    "outputs": [
@@ -112,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "bcf41f3b-936b-4108-9469-60428798766d",
    "metadata": {},
    "outputs": [
@@ -136,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "14c0753e-e549-47ab-96f8-59ed36c67e3c",
    "metadata": {},
    "outputs": [],
@@ -148,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "aa362dd2-df7d-44d5-ae1f-7ff038a59b8b",
    "metadata": {},
    "outputs": [],
@@ -160,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "76f9ced3-87ba-4f9c-9e28-bb6c8b615a3d",
    "metadata": {},
    "outputs": [
@@ -181,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "27fbc934-6391-4e8a-9803-d824b75db25c",
    "metadata": {},
    "outputs": [
@@ -210,7 +226,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
+   "id": "6b4f3662-3674-4b4e-98ab-30827a7a53cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File successfully uploaded to s3://refocus-storage/insurance-data-processed/insurance_data_2025-02-11_02-45-54_processed.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define S3 bucket and file details\n",
+    "bucket_name = \"refocus-storage\"\n",
+    "file_key = \"insurance-data-processed/{}_processed.csv\".format(filename)\n",
+    "\n",
+    "# Convert DataFrame to CSV format in memory\n",
+    "csv_buffer = StringIO()\n",
+    "df.to_csv(csv_buffer, index=False)\n",
+    "\n",
+    "# Create S3 client\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "# Upload CSV file to S3\n",
+    "s3.put_object(Bucket=bucket_name, Key=file_key, Body=csv_buffer.getvalue())\n",
+    "\n",
+    "print(f\"File successfully uploaded to s3://{bucket_name}/{file_key}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "5cd1f3c5-af0c-478d-989a-d17a79f94714",
    "metadata": {},
    "outputs": [
