added automated job scripts and inference lambda

--- a/notebooks/2-pre-processing.ipynb
+++ b/notebooks/2-pre-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "155e05be-2f7a-49f5-a278-a096726ad1b4",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "4ac2db75-8500-4034-98bb-0b06b81e571a",
    "metadata": {},
    "outputs": [],
@@ -30,19 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "36eb7fdf-d158-41c6-b0cf-81516c6f74c9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create output directory if not exists\n",
-    "output_dir = \"data/outputs/\"\n",
+    "output_dir = \"../data/outputs/\"\n",
     "os.makedirs(output_dir, exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "8fe1700c-df1c-4b5c-a6f8-89ec7e1ae087",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,8 @@
     "# df = pd.read_csv(file_path)\n",
     "# Define S3 bucket and file details\n",
     "bucket_name = \"refocus-storage\"\n",
-    "file_key = \"inusrance-data-raw/insurance_data_2025-02-11_02-45-54.csv\"\n",
+    "filename = 'insurance_data_2025-02-11_02-45-54'\n",
+    "file_key = \"inusrance-data-raw/{}.csv\".format(filename)\n",
     "\n",
     "# Create S3 client\n",
     "s3 = boto3.client(\"s3\")\n",
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "6712c93c-d6d3-4c11-8859-437a8e3c2e24",
    "metadata": {},
    "outputs": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "4966d98b-1b19-4a0c-9588-ed2ad7967ec6",
    "metadata": {},
    "outputs": [
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "bcf41f3b-936b-4108-9469-60428798766d",
    "metadata": {},
    "outputs": [
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "14c0753e-e549-47ab-96f8-59ed36c67e3c",
    "metadata": {},
    "outputs": [],
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "aa362dd2-df7d-44d5-ae1f-7ff038a59b8b",
    "metadata": {},
    "outputs": [],
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "76f9ced3-87ba-4f9c-9e28-bb6c8b615a3d",
    "metadata": {},
    "outputs": [
@@ -196,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "27fbc934-6391-4e8a-9803-d824b75db25c",
    "metadata": {},
    "outputs": [
@@ -225,7 +226,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "id": "6b4f3662-3674-4b4e-98ab-30827a7a53cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File successfully uploaded to s3://refocus-storage/insurance-data-processed/insurance_data_2025-02-11_02-45-54_processed.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define S3 bucket and file details\n",
+    "bucket_name = \"refocus-storage\"\n",
+    "file_key = \"insurance-data-processed/{}_processed.csv\".format(filename)\n",
+    "\n",
+    "# Convert DataFrame to CSV format in memory\n",
+    "csv_buffer = StringIO()\n",
+    "df.to_csv(csv_buffer, index=False)\n",
+    "\n",
+    "# Create S3 client\n",
+    "s3 = boto3.client(\"s3\")\n",
+    "\n",
+    "# Upload CSV file to S3\n",
+    "s3.put_object(Bucket=bucket_name, Key=file_key, Body=csv_buffer.getvalue())\n",
+    "\n",
+    "print(f\"File successfully uploaded to s3://{bucket_name}/{file_key}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "5cd1f3c5-af0c-478d-989a-d17a79f94714",
    "metadata": {},
    "outputs": [
