--- a/notebooks/3b-model-training-rf.ipynb
+++ b/notebooks/3b-model-training-rf.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c97270a2-9f8e-47e8-8121-fed9cbf20a34",
+   "execution_count": 1,
+   "id": "ce98a51d-bb5a-4f06-8361-da430cbbc3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,58 +13,58 @@
     "import numpy as np\n",
     "import joblib  # For saving models\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
-    "from xgboost import XGBClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "from imblearn.over_sampling import SMOTE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "2db3b920-8161-404b-9370-ae5029a6872e",
+   "execution_count": 2,
+   "id": "f8499ba8-6a49-4164-93d7-989afe5a66fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Suppress warnings for cleaner output\n",
     "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "# Create output directory if not exists\n",
-    "output_dir = \"data/outputs/\"\n",
-    "os.makedirs(output_dir, exist_ok=True)"
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "db4fa9f8-527d-49f7-809c-98b44343d84a",
+   "execution_count": 3,
+   "id": "c7466c0e-4b4b-48bc-95aa-96f1edf138a4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create output directory if not exists\n",
+    "output_dir = \"../data/outputs/\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "\n",
     "# ---- STEP 1: LOAD DATA ----\n",
     "file_path = os.path.join(output_dir, \"features_insurance_data.csv\")\n",
-    "df = pd.read_csv(file_path)\n",
-    "\n",
-    "# Define feature columns (X) and target variable (y)\n",
-    "X = df.drop(columns=[\"churn\",\"customer_id\"])\n",
-    "y = df[\"churn\"]"
+    "df = pd.read_csv(file_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6ca810ed-5673-49bb-b1bc-a72e4c4ee8f6",
+   "execution_count": 4,
+   "id": "8aedc324-749a-40d8-81b2-e189ef606296",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Set: (800, 6), Testing Set: (200, 6)\n"
+      "Training Set: (800, 5), Testing Set: (200, 5)\n"
      ]
     }
    ],
    "source": [
+    "# Define feature columns (X) and target variable (y)\n",
+    "X = df.drop(columns=[\"churn\",\"customer_id\"])\n",
+    "y = df[\"churn\"]\n",
+    "\n",
     "# ---- STEP 2: TRAIN-TEST SPLIT (80/20) ----\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, stratify=y, random_state=42)\n",
     "\n",
@@ -73,15 +73,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cf61348b-1a9b-4350-8bb9-2145f7673d69",
+   "execution_count": 5,
+   "id": "c2a83cbc-567a-4631-b5c9-dd3eb22715ca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resampled Training Set: (1274, 6)\n"
+      "Resampled Training Set: (1274, 5)\n"
      ]
     }
    ],
@@ -95,15 +95,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b6c8472f-8470-4f98-a304-fca76c400ecd",
+   "execution_count": 6,
+   "id": "bb6c47a3-f8d7-41fe-ab0e-e286c6c64d57",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Model Parameters: {'colsample_bytree': 0.8, 'learning_rate': 0.2, 'max_depth': 6, 'n_estimators': 300, 'subsample': 1.0}\n"
+      "Best Model Parameters: {'max_depth': 20, 'min_samples_leaf': 1, 'min_samples_split': 2, 'n_estimators': 100}\n"
      ]
     }
    ],
@@ -111,18 +111,17 @@
     "# ---- STEP 4: HYPERPARAMETER TUNING USING CROSS-VALIDATION ----\n",
     "# Define the hyperparameter grid\n",
     "param_grid = {\n",
-    "    \"n_estimators\": [100, 200, 300],  # Number of boosting rounds\n",
-    "    \"learning_rate\": [0.01, 0.1, 0.2],  # Learning rate\n",
-    "    \"max_depth\": [3, 6, 9],  # Maximum depth of trees\n",
-    "    \"subsample\": [0.8, 1.0],  # Fraction of samples used per boosting round\n",
-    "    \"colsample_bytree\": [0.8, 1.0]  # Fraction of features used per tree\n",
+    "    \"n_estimators\": [50, 100, 200],  # Number of trees in the forest\n",
+    "    \"max_depth\": [10, 20, None],  # Maximum depth of the trees\n",
+    "    \"min_samples_split\": [2, 5, 10],  # Minimum number of samples required to split\n",
+    "    \"min_samples_leaf\": [1, 2, 4]  # Minimum number of samples required at a leaf node\n",
     "}\n",
     "\n",
-    "# Define the XGBoost model\n",
-    "xgb_model = XGBClassifier(eval_metric=\"logloss\", random_state=42)\n",
+    "# Define the Random Forest model\n",
+    "rf_model = RandomForestClassifier(random_state=42, n_jobs=-1)\n",
     "\n",
     "# Perform GridSearchCV with 5-fold stratified cross-validation\n",
-    "grid_search = GridSearchCV(xgb_model, param_grid, cv=StratifiedKFold(n_splits=5), scoring=\"f1\", n_jobs=-1)\n",
+    "grid_search = GridSearchCV(rf_model, param_grid, cv=StratifiedKFold(n_splits=5), scoring=\"f1\", n_jobs=-1)\n",
     "grid_search.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
     "# Get the best model from grid search\n",
@@ -132,8 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "e935324a-170e-40dc-ac62-2af640e9c0f2",
+   "execution_count": 7,
+   "id": "41ba74ec-2a9f-4c9f-94c0-9c2de5818898",
    "metadata": {},
    "outputs": [
     {
@@ -543,43 +542,13 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
-       "              colsample_bylevel=None, colsample_bynode=None,\n",
-       "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
-       "              enable_categorical=False, eval_metric=&#x27;logloss&#x27;,\n",
-       "              feature_types=None, gamma=None, grow_policy=None,\n",
-       "              importance_type=None, interaction_constraints=None,\n",
-       "              learning_rate=0.2, max_bin=None, max_cat_threshold=None,\n",
-       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=6,\n",
-       "              max_leaves=None, min_child_weight=None, missing=nan,\n",
-       "              monotone_constraints=None, multi_strategy=None, n_estimators=300,\n",
-       "              n_jobs=None, num_parallel_tree=None, random_state=42, ...)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;XGBClassifier<span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
-       "              colsample_bylevel=None, colsample_bynode=None,\n",
-       "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
-       "              enable_categorical=False, eval_metric=&#x27;logloss&#x27;,\n",
-       "              feature_types=None, gamma=None, grow_policy=None,\n",
-       "              importance_type=None, interaction_constraints=None,\n",
-       "              learning_rate=0.2, max_bin=None, max_cat_threshold=None,\n",
-       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=6,\n",
-       "              max_leaves=None, min_child_weight=None, missing=nan,\n",
-       "              monotone_constraints=None, multi_strategy=None, n_estimators=300,\n",
-       "              n_jobs=None, num_parallel_tree=None, random_state=42, ...)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(max_depth=20, n_jobs=-1, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;RandomForestClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.ensemble.RandomForestClassifier.html\">?<span>Documentation for RandomForestClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(max_depth=20, n_jobs=-1, random_state=42)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
-       "              colsample_bylevel=None, colsample_bynode=None,\n",
-       "              colsample_bytree=0.8, device=None, early_stopping_rounds=None,\n",
-       "              enable_categorical=False, eval_metric='logloss',\n",
-       "              feature_types=None, gamma=None, grow_policy=None,\n",
-       "              importance_type=None, interaction_constraints=None,\n",
-       "              learning_rate=0.2, max_bin=None, max_cat_threshold=None,\n",
-       "              max_cat_to_onehot=None, max_delta_step=None, max_depth=6,\n",
-       "              max_leaves=None, min_child_weight=None, missing=nan,\n",
-       "              monotone_constraints=None, multi_strategy=None, n_estimators=300,\n",
-       "              n_jobs=None, num_parallel_tree=None, random_state=42, ...)"
+       "RandomForestClassifier(max_depth=20, n_jobs=-1, random_state=42)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,8 +560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3779fbfd-6d80-4d31-88e3-7a1bc8cf5fb5",
+   "execution_count": 8,
+   "id": "4a9707e7-0fbb-4231-8326-7db53b0e758a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,8 +572,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "2a17e43e-9fb2-4236-af11-fe7012d64045",
+   "execution_count": 9,
+   "id": "3b30d082-55df-46e9-a175-227257b385d0",
    "metadata": {},
    "outputs": [
     {
@@ -613,11 +582,11 @@
      "text": [
       "\n",
       "Model Performance Metrics:\n",
-      "Accuracy: 0.7100\n",
-      "Precision: 0.1852\n",
-      "Recall: 0.1220\n",
-      "F1 Score: 0.1471\n",
-      "AUC-ROC: 0.4341\n"
+      "Accuracy: 0.6800\n",
+      "Precision: 0.2326\n",
+      "Recall: 0.2439\n",
+      "F1 Score: 0.2381\n",
+      "AUC-ROC: 0.5362\n"
      ]
     }
    ],
@@ -639,50 +608,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "ffcc19e5-a814-4e54-b2e1-c456af593f7e",
+   "execution_count": 10,
+   "id": "2578c50b-84b3-4cec-90fc-9bd751db37d2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Predictions Saved at: data/outputs/xgboost_model_predictions.csv\n"
+      "Model Predictions Saved at: data/outputs/rf_model_predictions.csv\n"
      ]
     }
    ],
    "source": [
     "# ---- STEP 8: SAVE MODEL PREDICTIONS ----\n",
     "predictions_df = pd.DataFrame({\"Actual\": y_test, \"Predicted\": y_pred, \"Predicted_Probability\": y_pred_proba})\n",
-    "predictions_file = os.path.join(output_dir, \"xgboost_model_predictions.csv\")\n",
+    "predictions_file = os.path.join(output_dir, \"rf_model_predictions.csv\")\n",
     "predictions_df.to_csv(predictions_file, index=False)\n",
     "print(f\"Model Predictions Saved at: {predictions_file}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "5daccd97-5840-4a02-952a-e200275be663",
+   "execution_count": 11,
+   "id": "033fb0d2-ed43-4d88-a49d-156f4d655fd9",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trained Model Saved at: data/outputs/xgboost_model.pkl\n",
+      "Trained Model Saved at: data/outputs/random_forest_model.pkl\n",
       "\n",
-      "XGBoost Model Training Completed Successfully!\n"
+      "Random Forest Model Training Completed Successfully!\n"
      ]
     }
    ],
    "source": [
     "# ---- STEP 9: SAVE THE TRAINED MODEL ----\n",
-    "model_file = os.path.join(output_dir, \"xgboost_model.pkl\")\n",
+    "model_file = os.path.join(output_dir, \"random_forest_model.pkl\")\n",
     "joblib.dump(best_model, model_file)\n",
     "print(f\"Trained Model Saved at: {model_file}\")\n",
     "\n",
-    "print(\"\\nXGBoost Model Training Completed Successfully!\")"
+    "print(\"\\nRandom Forest Model Training Completed Successfully!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72caeae0-850c-404e-a0a3-72ac71212ab9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
